--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                 <h3 class="home_profession">Web Developer</h3>
                                 <!-- Button to generate and download the pdf. Available for desktop. -->
                                 <div>
-                                    <a download="" href="assets/pdf/Muhammadessa-resume.pdf" class="home_button-movil">Download</a>
+                                    <a download="" href="assets/pdf/Agung-Ristanto-resume.pdf" class="home_button-movil">Download</a>
                                 </div>
                             </div>
                             <div class="home_address bd-grid">
@@ -109,13 +109,13 @@
                     <section class="social section">
                         <h2 class="section-title">SOCIAL</h2>
                         <div class="social_container bd-grid">
-                            <a href="https://www.linkedin.com/in/imuhammadessa/" target="_blank" class="social_link">
+                            <a href="https://www.linkedin.com/in//" target="_blank" class="social_link">
                                 <i class="bx bxl-linkedin-square social_icon"></i> @LinkedIn Profile
                             </a>
                             <a href="https://github.com/AgRistan/" target="_blank" class="social_link">
                                 <i class="bx bxl-github social_icon"></i> @GitHub Profile
                             </a>
-                            <a href="https://twitter.com/imuhammadessa" target="_blank" class="social_link">
+                            <a href="https://twitter.com/" target="_blank" class="social_link">
                                 <i class="bx bxl-instagram social_icon"></i> @Instagram Profile
                             </a>
                         </div>
